--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </button>
 <a class="navbar-brand js-scroll-trigger" href="/">
 <!-- <img src="#" width="70" height="35" class="" alt=" logo"> -->
-<strong>unblocked-gamesx.github.io</strong>
+<strong>j7907.github.io</strong>
 </a>
 <div class="navbar-collapse collapse" id="nav-menu">
 </div>
@@ -181,7 +181,7 @@
   
   
             </p>
-<p>unblocked-gamesx.github.io</p>
+<p>j7907.github.io</p>
 </div>
 </div>
 </div>
